# lun

./: .gitignore  Cargo.toml  README.md  build-book.sh
lun/: Cargo.toml  book.toml  build.rs
lun/manual/: assembly.md  datatypes.md  instructions.md  registers.md  scratch.md
lun/manual/isa/: _opcode_reservations.md  add.md  div.md
lun/spec/: Overview.md  SUMMARY.md  datatypes.md  registers.md  scratch.md
lun/spec/isa/: add.md  div.md  prologue.md
lun/src/: lib.rs  main.rs  prelude.rs
lun/src/base/: display_target.rs  mod.rs  write_buffer.rs
lun/src/instruction_set/: instruction.rs  iprelude.rs  mod.rs
lun/src/instruction_set/arithmetic/: add.rs  div.rs  min.rs  mod.rs
lun/src/instruction_set/flow/: br.rs  halt.rs  mod.rs
lun/src/instruction_set/io/: mod.rs  pop.rs  push.rs  put.rs
lun/src/instruction_set/logic/: and.rs  cmp.rs  mod.rs  or.rs  xor.rs
lun/src/isa/: instruction.rs  iprelude.rs  prelude.rs
lun/src/isa/arithmetic/: add.rs  div.rs  mod.rs  mul.rs
lun/src/isa/flow/: br.rs  halt.rs  mod.rs
lun/src/isa/io/: cp.rs  mod.rs  mv.rs  pop.rs  push.rs  put.rs
lun/src/isa/logic/: and.rs  cmp.rs  mod.rs  or.rs  xor.rs
lun/src/vm/: display_buffer.rs  err.rs  instruction.rs  is.rs  mod.rs  prelude.rs
lun/src/vm/arithmetic/: add.rs  min.rs  mod.rs  mul.rs
lun/src/vm/cpu/: registers.rs
lun/src/vm/cpu/registers/: addressable.rs  mod.rs  partial.rs
lun/src/vm/flow/: br.rs  mod.rs
lun/src/vm/io/: mod.rs  put.rs
lun/src/vm/logic/: and.rs  cmp.rs  mod.rs  or.rs  xor.rs
lun/tests/: byte_registers.rs  misc_arithmetic.rs
(+30 files in other folders)
